# MM-with-Whole-Body-Safety-Release

./: .gitmodules  GetModelsize.py  README.md
swerve_hw_controller/: CMakeLists.txt  package.xml  robot_base_plugin.xml  swerve_dev.rules
swerve_hw_controller/Utils/common/: RobotMessage.h  modelDefine.h
swerve_hw_controller/Utils/interface/: uart.cpp
swerve_hw_controller/config/: controller.yaml
swerve_hw_controller/include/: dh_gripper.hpp  kortex_interface.hpp
swerve_hw_controller/include/swerve_base_controller/: hardware_interface.hpp  swerve_hw.hpp  swerve_hw_loop.hpp
swerve_hw_controller/launch/: swerve_hw.launch
swerve_hw_controller/src/: dh_gripper.cpp  hardware_interface.cpp  kortex_interface.cpp  swerve_hw.cpp  swerve_hw_loop.cpp  swerve_hw_node.cpp
swerve_qp/swerve_qp_ros_control/: CMakeLists.txt  package.xml  swerve_qp_ros_control_plugin.xml
swerve_qp/swerve_qp_ros_control/auto_generated/end_effector_kinematics_orientation/cppad_generated/: end_effector_kinematics_orientation_forward_zero.c  end_effector_kinematics_orientation_info.c  end_effector_kinematics_orientation_jacobian_sparsity.c  end_effector_kinematics_orientation_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/end_effector_kinematics_position/cppad_generated/: end_effector_kinematics_position_forward_zero.c  end_effector_kinematics_position_info.c  end_effector_kinematics_position_jacobian_sparsity.c  end_effector_kinematics_position_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/end_effector_kinematics_velocity/cppad_generated/: end_effector_kinematics_velocity_forward_zero.c  end_effector_kinematics_velocity_info.c  end_effector_kinematics_velocity_jacobian_sparsity.c  end_effector_kinematics_velocity_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/nominal_arm_cost_0/cppad_generated/: cppad_cg_models.c  nominal_arm_cost_0_atomic_functions.c  nominal_arm_cost_0_forward_zero.c  nominal_arm_cost_0_info.c  nominal_arm_cost_0_jacobian_sparsity.c  nominal_arm_cost_0_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/nominal_arm_cost_1/cppad_generated/: cppad_cg_models.c  nominal_arm_cost_1_atomic_functions.c  nominal_arm_cost_1_forward_zero.c  nominal_arm_cost_1_info.c  nominal_arm_cost_1_jacobian_sparsity.c  nominal_arm_cost_1_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/nominal_arm_cost_2/cppad_generated/: cppad_cg_models.c  nominal_arm_cost_2_atomic_functions.c  nominal_arm_cost_2_forward_zero.c  nominal_arm_cost_2_info.c  nominal_arm_cost_2_jacobian_sparsity.c  nominal_arm_cost_2_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/nominal_arm_cost_3/cppad_generated/: cppad_cg_models.c  nominal_arm_cost_3_atomic_functions.c  nominal_arm_cost_3_forward_zero.c  nominal_arm_cost_3_info.c  nominal_arm_cost_3_jacobian_sparsity.c  nominal_arm_cost_3_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/nominal_arm_cost_4/cppad_generated/: cppad_cg_models.c  nominal_arm_cost_4_atomic_functions.c  nominal_arm_cost_4_forward_zero.c  nominal_arm_cost_4_info.c  nominal_arm_cost_4_jacobian_sparsity.c  nominal_arm_cost_4_sparse_jacobian.c
swerve_qp/swerve_qp_ros_control/auto_generated/nominal_arm_cost_5/cppad_generated/: cppad_cg_models.c  nominal_arm_cost_5_atomic_functions.c  nominal_arm_cost_5_forward_zero.c  nominal_arm_cost_5_info.c  nominal_arm_cost_5_jacobian_sparsity.c  (+1 more)
swerve_qp/swerve_qp_ros_control/config/: config.yaml  model_size.info
swerve_qp/swerve_qp_ros_control/include/: SwerveDynamics.hpp  SwerveInterface.hpp  SwerveModelInfo.hpp  SwervePinocchioMapping.hpp  SwerveTarget.hpp  crop_sphere.hpp  space_decomp.hpp  swerve_ipopt.hpp  swerve_qp_problem.hpp
swerve_qp/swerve_qp_ros_control/include/Altro_control/: Altro_model_base_x.hpp  Altro_model_base_y.hpp  Altro_model_base_yaw.hpp  Altro_model_joint1.hpp  Altro_model_joint2.hpp  Altro_model_joint3.hpp  Altro_model_joint4.hpp  Altro_model_joint5.hpp  Altro_model_joint6.hpp  Altro_problem.hpp  RelaxBarrierPenalty.hpp  basic_constraints.hpp  quadratic_cost_f.hpp  quadratic_cost_u.hpp  rotation_tool.hpp  unicycle.hpp
swerve_qp/swerve_qp_ros_control/include/SDPutils/: SDPutils.hpp
swerve_qp/swerve_qp_ros_control/include/constraint/: JointLimitsConstraint.hpp  LegsConstraintCppAd.hpp  LegsInputConstraints.hpp  WheelRollingConstraintCppAd.hpp
swerve_qp/swerve_qp_ros_control/include/cost/: NominalArmStateCppAd.hpp  NominalSteerStateCppAd.hpp
swerve_qp/swerve_qp_ros_control/include/reference_manager/: SwerveReferenceManager.hpp
swerve_qp/swerve_qp_ros_control/include/swerve_qp_ros_control/: swerve_qp_control.hpp
swerve_qp/swerve_qp_ros_control/src/: SwerveInterface.cpp  SwerveMpcNode.cpp  SwervePinocchioMapping.cpp  SwerveTarget.cpp  gripper_client.py  keyboard_control.py  sdptest.cpp  space_decomp.cpp  swerve_ipopt.cpp  swerve_qp_ros_control.cpp
swerve_qp/swerve_qp_ros_control/src/Altro_control/: Altro_control.cpp  Altro_model_base_x.cpp  Altro_model_base_y.cpp  Altro_model_base_yaw.cpp  Altro_model_joint1.cpp  Altro_model_joint2.cpp  Altro_model_joint3.cpp  Altro_model_joint4.cpp  Altro_model_joint5.cpp  Altro_model_joint6.cpp  Altro_problem.cpp  RelaxBarrierPenalty.cpp  basic_constraints.cpp  quadratic_cost.cpp  quadratic_cost_f.cpp  quadratic_cost_u.cpp  rotation_tool.cpp  unicycle.cpp
swerve_qp/swerve_qp_ros_control/src/SDPsolver/: SDPsolver.cpp
swerve_qp/swerve_qp_ros_control/src/SDPutils/: SDPutils.cpp
swerve_qp/swerve_qp_ros_control/src/constraint/: EndEffectorConstraint.cpp  JointLimitsConstraint.cpp  JointVelocityLimits.cpp  LegsConstraintCppAd.cpp  LegsInputConstraints.cpp  WheelRollingConstraintCppAd.cpp
swerve_qp/swerve_qp_ros_control/src/cost/: NominalArmStateCppAd.cpp  NominalSteerStateCppAd.cpp
swerve_qp/swerve_qp_ros_control/src/dynamics/: SwerveDynamics.cpp
swerve_qp/swerve_qp_ros_control/src/map_generator/: map_generator.cpp
swerve_qp/swerve_qp_ros_control/src/reference_manager/: SwerveReferenceManager.cpp
swerve_qp/swerve_qp_ros_control/src/scripts/: keyboard_control.py
(+55 files in other folders)
